# gql-merged-objects

./: Cargo.toml  README.md  expand.rs
src/: main.rs  object.txt  subscription.txt
